testing netlify edge functions

--- a/client/public/locales/ar/translation.json
+++ b/client/public/locales/ar/translation.json
@@ -120,5 +120,6 @@
     "ad_title": "اسم الإعلان",
     "seller_info": "بيانات المعلن",
     "see_all_seller_ads": "مشاهدة جميع الاعلانات من ", 
-    "submit_ad_for_review": "إرسال الإعلان للمراجعة"
+    "submit_ad_for_review": "إرسال الإعلان للمراجعة",
+    "details":  "التفاصيل"
 }
