adding meta data for other site pages

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -65,11 +65,7 @@
     "founders_title": "Founders",
     "email": "email",
     "password": "password",
-    "login_as_user":"login as car owner",
-    "login_as_workshop_owner":"login as workshop owner",
     "forgot_password": "forgot password?",
-    "register_as_user":"register as car owner",
-    "register_as_workshop_owner":"register as workshop owner",
     "register_mobile": "Mobile Number",
     "register_name": "Name",
     "register_account_info": "Account Information",
@@ -91,14 +87,6 @@
     "create_post_header": "Create Post",
     "create_post": "Publish",
     "public_privacy":"Public",
-    "restricted_privacy":"Followers Only",
-    "post_like": "like",
-    "post_dislike": "dislike",
-    "post_comment": "comment",
-    "post_edit": "edit",
-    "post_edit_cancel": "cancel",
-    "post_delete": "delete",
-    "post_empty": "please write anything to post",
     "login_required": "please login first",
     "create_comment":"comment",
     "comment_empty": "please write anything to comment",
@@ -113,5 +101,6 @@
     "ad_title": "Ad Title",
     "seller_info": "Seller Information",
     "see_all_seller_ads": "see all ads form ",
-    "submit_ad_for_review": "Submit ad for review"
+    "submit_ad_for_review": "Submit ad for review",
+    "details": "Details"
 }
