--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -77,7 +77,6 @@
     "add_another_service": "add another service",
     "choose_model": "choose one car model or more",
     "add_another_model": "add another car model",
-    "founder": "Ibrahim Mohamed",
     "home_card_create_account": "Create Account",
     "home_card_browse": "Browse Auto Service Centers",
     "home_card_contact": "Contact with Auto Service Centers",
@@ -88,10 +87,6 @@
     "create_post": "Publish",
     "public_privacy":"Public",
     "login_required": "please login first",
-    "create_comment":"comment",
-    "comment_empty": "please write anything to comment",
-    "comment_edit":"edit",
-    "comment_delete":"delete",
     "price_sign": "L.E",
     "price": "Price",
     "address": "Address",
@@ -102,5 +97,22 @@
     "seller_info": "Seller Information",
     "see_all_seller_ads": "see all ads form ",
     "submit_ad_for_review": "Submit ad for review",
-    "details": "Details"
+    "details": "Details",
+    "buy": "Buy",
+    "rent": "Rent",
+    "sell": "Sell",
+    "title_rest": "everything related to Forklifts in Egypt",
+    "cancel": "cancel",
+    "avanced_search": "avanced search",
+    "my_ads": "My Ads",
+    "ad_status": "ad status: ",
+    "edit_ad": "Edit Ad",
+    "edit": "edit",
+    "delete": "delete",
+    "confirmation_title": "Are you sure?",
+    "confirmation_text": "You won't be able to revert this!",
+    "confirmation_btn_text": "Yes, delete it!",
+    "confirmation_btn_cancel": "Cancel",
+    "confirmation_success_title": "Deleted!",
+    "confirmation_success_text": "Your ad has been deleted."
 }
