--- a/server/locales/ar/translation.json
+++ b/server/locales/ar/translation.json
@@ -31,5 +31,6 @@
     "success": "تم بنجاح",
     "ad_accepted":"تم قبول الإعلان",
     "ad_refused": "تم رفض الإعلان",
-    "ad_deleted": "تم حذف الإعلان"
+    "ad_deleted": "تم حذف الإعلان",
+    "ad_edit": "إعلانك حاليًا قيد المراجعة من قبل فريقنا."
 }
