--- a/server/locales/en/translation.json
+++ b/server/locales/en/translation.json
@@ -32,5 +32,6 @@
     "success":"succeeded",
     "ad_accepted":"ad accepted",
     "ad_refused": "ad refused",
-    "ad_deleted": "ad deleted successfully"
+    "ad_deleted": "ad deleted successfully",
+    "ad_edit": "Your ad is currently under review by our team."
 }
