fixed profile photo error and added account verification feedback message

--- a/server/locales/ar/translation.json
+++ b/server/locales/ar/translation.json
@@ -32,5 +32,6 @@
     "ad_accepted":"تم قبول الإعلان",
     "ad_refused": "تم رفض الإعلان",
     "ad_deleted": "تم حذف الإعلان",
-    "ad_edit": "إعلانك حاليًا قيد المراجعة من قبل فريقنا."
+    "ad_edit": "إعلانك حاليًا قيد المراجعة من قبل فريقنا.",
+    "account_verified": "تم تأكيد الحساب بنجاح."
 }
