--- a/server/locales/en/translation.json
+++ b/server/locales/en/translation.json
@@ -33,5 +33,6 @@
     "ad_accepted":"ad accepted",
     "ad_refused": "ad refused",
     "ad_deleted": "ad deleted successfully",
-    "ad_edit": "Your ad is currently under review by our team."
+    "ad_edit": "Your ad is currently under review by our team.",
+    "account_verified": "Account successfully verified."
 }
