--- a/server/locales/ar/translation.json
+++ b/server/locales/ar/translation.json
@@ -33,5 +33,10 @@
     "ad_refused": "تم رفض الإعلان",
     "ad_deleted": "تم حذف الإعلان",
     "ad_edit": "إعلانك حاليًا قيد المراجعة من قبل فريقنا.",
-    "account_verified": "تم تأكيد الحساب بنجاح."
+    "account_verified": "تم تأكيد الحساب بنجاح.",
+    "password_limit": "كلمة المرور يجب أن 8 أحرف كحد أدني",
+    "password_reseted": "تم تحديث كلمة المرور بنجاح، من فضلك قم بتسجيل الدخول",
+    "enter_password": "من فضلك قم بإدخال كلمة المرور",
+    "invalid_token": "الرمز غير صحيح، قم بإعادة المحاولة",
+    "password_link_sent": "تم إرسال رابط إعادة تعيين كلمة المرور إلى بريدك الإلكتروني، يرجى التحقق من صندوق الوارد الخاص بك"
 }
