--- a/server/locales/en/translation.json
+++ b/server/locales/en/translation.json
@@ -34,5 +34,10 @@
     "ad_refused": "ad refused",
     "ad_deleted": "ad deleted successfully",
     "ad_edit": "Your ad is currently under review by our team.",
-    "account_verified": "Account successfully verified."
+    "account_verified": "Account successfully verified.",
+    "password_limit": "password can't be less than 8 characters",
+    "password_reseted": "password reseted successfully, please login",
+    "enter_password": "please enter the password",
+    "invalid_token" : "invalid token, please try again",
+    "password_link_sent": "password reset link sent to your email, please check your inbox"
 }
