added notifications system and updated admin dashboard

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -130,5 +130,6 @@
     "parts": "Parts",
     "username_required": "username required",
     "email_required": "email required",
-    "password_required" :"password required"
+    "password_required" :"password required",
+    "load_more": "load more..."
 }
