--- a/client/public/locales/ar/translation.json
+++ b/client/public/locales/ar/translation.json
@@ -152,5 +152,6 @@
     "parts": "قطع الغيار",
     "username_required": "برجاء كتابة الاسم",
     "email_required": "برجاء كتابة البريد الإلكتروني",
-    "password_required" :"برجاء كتابة كلمة المرور"
+    "password_required" :"برجاء كتابة كلمة المرور",
+    "load_more": "...تحميل المزيد"
 }
