--- a/client/public/locales/ar/translation.json
+++ b/client/public/locales/ar/translation.json
@@ -153,5 +153,6 @@
     "username_required": "برجاء كتابة الاسم",
     "email_required": "برجاء كتابة البريد الإلكتروني",
     "password_required" :"برجاء كتابة كلمة المرور",
-    "load_more": "...تحميل المزيد"
+    "load_more": "...تحميل المزيد",
+    "no_notifications": "لا توجد اشعارات"
 }
