added translation for verify account message

--- a/client/public/locales/ar/translation.json
+++ b/client/public/locales/ar/translation.json
@@ -155,5 +155,7 @@
     "password_required" :"برجاء كتابة كلمة المرور",
     "load_more": "...تحميل المزيد",
     "no_notifications": "لا توجد اشعارات",
-    "file_size_error": "يجب أن يكون حجم الملف أقل من 2 ميجابايت"
+    "file_size_error": "يجب أن يكون حجم الملف أقل من 2 ميجابايت",
+    "verify_account": "حسابك غير مفعل، من فضلك قم بالتحقق من البريد الإلكتروني وانقر الرابط لتفعيل حسابك",
+    "send_another_link": "إرسال رابط آخر"
 }
