added drivers section

--- a/client/public/locales/ar/translation.json
+++ b/client/public/locales/ar/translation.json
@@ -3,7 +3,7 @@
     "about_us_title": "كلاركي | عنّا",
     "admin_page_title": "كلاركي | صفحة المسؤول",
     "search_page_title": "كلاركي | نتائج البحث",
-    "workshop_profile_page_title":"كلاركي | الورشة",
+    "drivers_page_title":"كلاركي | السائقين",
     "user_profile_page_title":"كلاركي | الملف الشخصي",
     "user_conversations_page_title":"كلاركي | المحادثات",
     "user_messages_page_title":"كلاركي | الرسائل",
@@ -11,10 +11,12 @@
     "login_page_title":"كلاركي | تسجيل الدخول",
     "register_page_title":"كلاركي | إنشاء حساب",
     "not_found_page_title":"كلاركي | صفحة غير موجودة",
+    "drivers_page_desc" :"ابحث عن سائقي المعدات الثقيلة في مصر بكل سهولة",
     "header_title": "كلاركي",
     "navbar_main": "الرئيسية",
     "navbar_contact": "عنّا",
     "navbar_search": "صفحة البحث",
+    "navbar_drivers": "السائقين",
     "navbar_admin": "صفحة المسؤول",
     "navbar_sell": "إنشاء إعلان",
     "dropdown_account": "حسابي",
@@ -35,22 +37,8 @@
     "search_edit": "تعديل البحث",
     "reset_inputs": "عرض الكل",
     "search_results": "نتائج البحث:",
-    "no_workshop_desc": "لا يوجد وصف",
-    "workshop_services": "الخدمات",
-    "workshop_cars": "ماركات السيارات",
-    "workshop_branches": "الفروع",
-    "workshop_ratings": "التقييمات",
-    "no_workshop_ratings": "لا توجد تقييمات",
-    "add_rating": "أضف تقييم",
-    "rate": "تقييم",
     "delete_btn": "حذف",
-    "send_message_btn": "مراسلة",
     "contact_information": "بيانات التواصل",
-    "profile_ratings": "تقييماتك",
-    "no_profile_ratings": "لا توجد تقييمات",
-    "profile_favorites": "المفضلة",
-    "user_conversations": "محادثاتك",
-    "no_user_conversations": "لا توجد محادثات",
     "cant_show_conversation": "لا يمكنك عرض هذه المحادثة",
     "user_settings_name": "تغيير الاسم",
     "user_settings_password": "تغيير كلمة المرور",
@@ -64,15 +52,6 @@
     "forgot_password": "هل نسيت كلمة المرور؟",
     "register":"إنشاء حساب",
     "no_results": "لا توجد نتائج",
-    "send": "ارسال",
-    "you_are_messaging": "انت تراسل: ",
-    "workshop": "ورشة: ",
-    "write_your_message": "اكتب رسالتك",
-    "about_app_title": "عن التطبيق",
-    "about_app_desc": "تطبيق يهدف لربط مقدمي خدمات صيانة السيارات بأصحاب السيارات، ويسعي لتقديم أفضل تجربة لمالك السيارة.",
-    "our_vision_title": "أهدافنا",
-    "our_vision_desc": "نهدف إلي تنظيم سوق صيانة وقطع غيار السيارات وتقديم أفضل تجربة لأصحاب السيارات من خلال توفير نظام يمكنهم من تقييم مقدمي الخدمات والبحث عن أفضل مقدم خدمة بجواره",
-    "founders_title": "المؤسسين",
     "email": "البريد الإلكتروني",
     "password": "كلمة المرور",
     "register_mobile": "رقم الموبايل",
@@ -93,25 +72,9 @@
     "home_card_create_account": "انشأ حساب",
     "home_card_browse": "اعلن عن منتجك",
     "home_card_contact": "تواصل مع مركز الصيانة",
-    "mechanic_data":"بيانات الورشة",
-    "mechanic_posts":"المنشورات",
     "no_posts": "لا توجد منشورات",
-    "create_post_header": "إنشاء منشور",
-    "create_post": "نشر",
-    "public_privacy": "للعامة",
-    "restricted_privacy":"للمتابعين فقط",
-    "post_like": "إعجاب",
-    "post_dislike": "إلغاء الإعجاب",
-    "post_comment": "تعليق",
-    "post_edit": "تعديل",
-    "post_edit_cancel": "إلغاء",
-    "post_delete": "حذف",
     "post_empty": "من فضلك اكتب شيئًا لنشره",
     "login_required": "من فضلك قم بتسجيل الدخول أولًا",
-    "create_comment": "تعليق",
-    "comment_empty": "من فضلك اكتب شيئًا لنشره",
-    "comment_edit":"تعديل",
-    "comment_delete":"حذف",
     "price_sign": "ج.م",
     "price": "السعر",
     "photos": "الصور",
@@ -157,5 +120,23 @@
     "no_notifications": "لا توجد اشعارات",
     "file_size_error": "يجب أن يكون حجم الملف أقل من 2 ميجابايت",
     "verify_account": "حسابك غير مفعل، من فضلك قم بالتحقق من البريد الإلكتروني وانقر الرابط لتفعيل حسابك",
-    "send_another_link": "إرسال رابط آخر"
+    "send_another_link": "إرسال رابط آخر",
+    "experience_years": "سنوات الخبرة",
+    "see_more": "تفاصيل أكثر...",
+    "residence": "محل الإقامة",
+    "age": "العمر",
+    "year": "سنة",
+    "all": "الكل",
+    "no_description": "لا يتوفر وصف",
+    "join_driver": "انضمام كسائق",
+    "name": "الاسم",
+    "driver_description_placeholder": "اكتب وصفا عن نفسك، عن خبراتك،...الخ",
+    "name_validation_error": "يجب أن يكون الاسم مكونًا من 3 أحرف على الأقل.",
+    "age_validation_error": "يجب أن يكون العمر بين 18 و 90 عامًا.",
+    "experience_validation_error": "عدد سنوات الخبرة مطلوب.",
+    "mobile_validation_error": "يجب أن يكون رقم الهاتف رقمًا مصريًا صالحًا.",
+    "photo_validation_error": "الصورة مطلوبة.",
+    "navbar_driver_join": "انضمام كسائق",
+    "personal_photo":"الصورة الشخصية",
+    "edit_driver": "تعديل بيانات السائق"
 }
