--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -3,7 +3,7 @@
     "about_us_title": "Clarky | About Us",
     "admin_page_title": "Clarky | Admin",
     "search_page_title": "Clarky | Search results",
-    "workshop_profile_page_title":"Clarky | Workshop profile",
+    "drivers_page_title":"Clarky | Drivers Search",
     "user_profile_page_title":"Clarky | Profile",
     "user_conversations_page_title":"Clarky | Conversations",
     "user_messages_page_title":"Clarky | Messages",
@@ -11,14 +11,15 @@
     "login_page_title":"Clarky | Login",
     "register_page_title":"Clarky | Register",
     "not_found_page_title":"Clarky | not found",
+    "drivers_page_desc": "find best trucks and forklifts drivers in Egypt easily",
     "header_title": "Clarky",
     "navbar_main": "Home",
     "navbar_contact": "About Us",
+    "navbar_drivers": "Drivers",
     "navbar_admin": "Admin",
     "navbar_search": "Search Page",
     "navbar_sell": "Create Ad",
     "dropdown_account": "my account",
-    "dropdown_conversations": "conversations",
     "dropdown_settings": "settings",
     "footer_title": "Clarky",
     "home_top_section_title": "Buy, Rent, and Sell everything related to Forklifts",
@@ -33,17 +34,8 @@
     "search_edit": "edit search",
     "reset_inputs": "show all",
     "search_results": "search results:",
-    "add_rating": "Add Rating",
-    "rate": "rate",
     "delete_btn": "delete",
-    "send_message_btn": "send message",
     "contact_information": "Contact Information",
-    "profile_ratings": "your ratings",
-    "no_profile_ratings": "no ratings",
-    "profile_favorites": "favorites",
-    "user_conversations": "Conversations",
-    "no_user_conversations": "no conversations started",
-    "cant_show_conversation": "you can't see this conversation",
     "user_settings_name": "change name",
     "user_settings_password": "change password",
     "user_settings_mobile": "change mobile number",
@@ -56,14 +48,6 @@
     "register":"register",
     "no_results": "no results",
     "send": "send",
-    "you_are_messaging": "you are maessaging: ",
-    "workshop": "workshop: ",
-    "write_your_message": "write your message",
-    "about_app_title": "About Application",
-    "about_app_desc": "An application that aims to connect car maintenance service providers with car owners, and seeks to provide the best experience for the car owner.",
-    "our_vision_title": "Our Vision",
-    "our_vision_desc": "We aim to organize the car maintenance and spare parts market and provide the best experience for car owners by providing a system that enables them to evaluate service providers and search for the best service provider next to it.",
-    "founders_title": "Founders",
     "email": "email",
     "password": "password",
     "forgot_password": "forgot password?",
@@ -135,5 +119,23 @@
     "no_notifications": "no notifications",
     "file_size_error": "File size must be less than 2MB",
     "verify_account": "please check your email and verify your account",
-    "send_another_link": "send another verification link"
+    "send_another_link": "send another verification link",
+    "experience_years": "experience years",
+    "see_more": "more details...",
+    "residence": "residence",
+    "age": "age",
+    "year": "years",
+    "all": "all",
+    "no_description": "no description",
+    "join_driver": "Joining as a driver",
+    "name": "name",
+    "driver_description_placeholder": "write a description about yourself, your experience,...etc",
+    "name_validation_error": "Name should be at least 3 characters.",
+    "age_validation_error": "Age should be between 18 and 90.",
+    "experience_validation_error": "Experience years is required.",
+    "mobile_validation_error": "Phone number should be a valid Egyptian number.",
+    "photo_validation_error": "A photo is required.",
+    "navbar_driver_join": "Join As Driver",
+    "personal_photo": "your photo",
+    "edit_driver": "Edit Driver"
 }
