--- a/server/locales/ar/translation.json
+++ b/server/locales/ar/translation.json
@@ -4,26 +4,16 @@
     "user_not_found": "هذا المستخدم غير موجود" ,
     "no_users": "لا يوجد مستخدمين",
     "user_deleted": "تم حذف المستخدم بنجاح",
-    "data_updated": "تم تحديث بياناتك بنجاح",
+    "data_updated": "تم تحديث بياناتك بنجاح وإرسالها لمراجعة المسؤول",
     "account_deleted": "تم حذف الحساب بنجاح",
-    "workshop_updated": "تم تحديث بيانات الورشة بنجاح",
     "attatch_image": "يرجي ارفاق الصورة",
     "photo_uploaded": "تم تحميل الصورة بنجاح",
-    "cant_show_conversation": "لا يمكنك عرض هذه المحادثة" ,
-    "select_deleted_messages": "يرجي تحديد الرسائل التي تريد حذفها",
-    "message_deleted": "تم حذف الرسالة بنجاح",
     "account_exist": "هذا الحساب موجود بالفعل، من فضلك قم بتسجيل الدخول" ,
     "account_created": "تم إنشاء الحساب، من فضلك قم بتسجيل الدخول",
     "incorrect_login_data": "خطأ في عنوان البريد الإلكتروني أو كلمة المرور",
     "post_created": "تم إنشاء منشورك بنجاح",
     "rated_before": "لقد قيمت هذه الورشة من قبل", 
     "post_not_found": "هذا المنشور غير موجود",
-    "post_deleted": "تم حذف المنشور بنجاح",
-    "post_edit": "تم التعديل بنجاح",
-    "liked_already":"لقد ابديت اعجابك بهذا المنشور بالفعل",
-    "unliked_yet":"لم تبدي إعجابك بهذا المنشور من قبل",
-    "comment_not_found": "هذا التعليق غير موجود",
-    "comment_deleted": "تم حذف التعليق بنجاح",
     "server_error": "خطأ في الخادم",
     "forbidden": "دخول غير مسموح",
     "not_deleted": "لم يتم الحذف بنجاح، اعد المحاولة",
@@ -39,5 +29,11 @@
     "enter_password": "من فضلك قم بإدخال كلمة المرور",
     "invalid_token": "الرمز غير صحيح، قم بإعادة المحاولة",
     "password_link_sent": "تم إرسال رابط إعادة تعيين كلمة المرور إلى بريدك الإلكتروني، يرجى التحقق من صندوق الوارد الخاص بك",
-    "registration_message": "شكراً لتسجيلك في كلاركي! يرجى التحقق من بريدك الإلكتروني لتفعيل حسابك."
+    "registration_message": "شكراً لتسجيلك في كلاركي! يرجى التحقق من بريدك الإلكتروني لتفعيل حسابك.",
+    "driver_created": "سيتم الموافقة علي بياناتك بعد مراجعة المسؤول",
+    "driver_not_found": "هذا لسائق غير موجود",
+    "driver_deleted": "تم حذف السائق بنجاح",
+    "driver_accepted": "تمت الموافقة بنجاح",
+    "driver_rejected": "تم الرفض بنجاح",
+    "driver_joined_already": "لقد انضممت كسائق من قبل، لا يمكنك الإنضمام إلا لمرة واحدة"
 }
