updated deleteUserCtrl function

--- a/server/locales/en/translation.json
+++ b/server/locales/en/translation.json
@@ -6,8 +6,6 @@
     "user_deleted": "user was deleted successfully",
     "data_updated": "your data was updated successfully",
     "account_deleted": "account was deleted successfully",
-    "no_workshop": "this workshop doesn't exist or may be removed",
-    "workshop_updated": "workshop data was updated successfully",
     "attatch_image": "please attatch an image",
     "photo_uploaded": "photo was uploaded successfully",
     "cant_show_conversation": "you can't view this conversation",
@@ -16,16 +14,7 @@
     "server_error": "Internal server error",
     "account_exist": "this account already exist, please login",
     "account_created": "account was created successfully, please login",
-    "incorrect_login_data": "the email or password is not correct",
-    "post_created": "post is created successfully",
-    "rated_before": "you already rated this mechanic before",
-    "post_not_found": "this post doesn't exist",
-    "post_deleted": "post is deleted successfully",
-    "post_edit": "post is edited successfully",
-    "liked_already": "You already liked this post",
-    "unliked_yet": "You haven't liked this post yet",
-    "comment_not_found": "comment not found",
-    "comment_deleted":"comment deleted successfully",
+    "incorrect_login_data": "the email or password is not correct",    
     "forbidden": "forbidden",
     "not_deleted": "The deletion was not successful, please try again",
     "cloudinary_error": "internal server error (cloudinary)",
@@ -46,5 +35,6 @@
     "driver_deleted": "driver deleted successfully",
     "driver_accepted": "driver accepted",
     "driver_rejected": "driver rejected",
-    "driver_joined_already": "This user has already joined as a driver"
+    "driver_joined_already": "This user has already joined as a driver",
+    "phone_duplication": "Sorry, the phone number you entered is already in use by another user. Please use a different phone number."
 }
