--- a/server/locales/ar/translation.json
+++ b/server/locales/ar/translation.json
@@ -11,9 +11,6 @@
     "account_exist": "هذا الحساب موجود بالفعل، من فضلك قم بتسجيل الدخول" ,
     "account_created": "تم إنشاء الحساب، من فضلك قم بتسجيل الدخول",
     "incorrect_login_data": "خطأ في عنوان البريد الإلكتروني أو كلمة المرور",
-    "post_created": "تم إنشاء منشورك بنجاح",
-    "rated_before": "لقد قيمت هذه الورشة من قبل", 
-    "post_not_found": "هذا المنشور غير موجود",
     "server_error": "خطأ في الخادم",
     "forbidden": "دخول غير مسموح",
     "not_deleted": "لم يتم الحذف بنجاح، اعد المحاولة",
@@ -35,5 +32,6 @@
     "driver_deleted": "تم حذف السائق بنجاح",
     "driver_accepted": "تمت الموافقة بنجاح",
     "driver_rejected": "تم الرفض بنجاح",
-    "driver_joined_already": "لقد انضممت كسائق من قبل، لا يمكنك الإنضمام إلا لمرة واحدة"
+    "driver_joined_already": "لقد انضممت كسائق من قبل، لا يمكنك الإنضمام إلا لمرة واحدة",
+    "phone_duplication": "عذرًا، رقم الهاتف الذي أدخلته مستخدم بالفعل من قبل مستخدم آخر. يُرجى استخدام رقم هاتف مختلف."
 }
