--- a/server/locales/ar/translation.json
+++ b/server/locales/ar/translation.json
@@ -33,5 +33,6 @@
     "driver_accepted": "تمت الموافقة بنجاح",
     "driver_rejected": "تم الرفض بنجاح",
     "driver_joined_already": "لقد انضممت كسائق من قبل، لا يمكنك الإنضمام إلا لمرة واحدة",
-    "phone_duplication": "عذرًا، رقم الهاتف الذي أدخلته مستخدم بالفعل من قبل مستخدم آخر. يُرجى استخدام رقم هاتف مختلف."
+    "phone_duplication": "عذرًا، رقم الهاتف الذي أدخلته مستخدم بالفعل من قبل مستخدم آخر. يُرجى استخدام رقم هاتف مختلف.",
+    "invalid_verification_token": "الرابط غير صالح"
 }
